@@ -15,6 +15,7 @@
 
 == Feedback
 
+- Henrique G. Testa - pause/resume concept
 - Sam Gibson - https://github.com/samfoo - exception handling hardening
 - sha1dy - https://github.com/sha1dy - every and overlapping exception issue
 - Defusal - unschedule_by_tag
